fix(ci): split nightly benchmarks by runner pool (H100/H200)
- Extract H200 models (Llama-4-Maverick) into separate single-worker-h200
  job so H200 pool runs independently from H100 max-parallel limits.
  H200 runners were idle waiting behind H100 jobs in the shared queue.
- H100 jobs: runs-on moved to job level, removed per-model runs_on/gpu_type
  from matrix entries since all H100 models share the same runner config.
- H200 jobs: include actions/setup-python@v6 for Python 3.12 since H200
  runners have Python 3.10 which doesn't meet smg's >=3.12 requirement.
- multi-worker-h200 commented out (Maverick multi already disabled).
- Update summarize-benchmarks to depend on single-worker-h200.
- Fix docstring in test_nightly_perf.py to reflect multi-runner setup.

--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -80,30 +80,28 @@ jobs:
         run: sccache --show-stats
 
   # ---------------------------------------------------------------------------
-  # Single-worker: one model per job for better isolation and debugging.
-  # Llama-4 Maverick runs on H200; all other models run on k8s H100.
+  # Single-worker (H100): one model per job on k8s H100 runners.
   # ---------------------------------------------------------------------------
 
   single-worker:
     name: "${{ matrix.model.id }} / single-${{ matrix.variant.id }}"
     needs: build-wheel
     if: ${{ !cancelled() }}
-    runs-on: ${{ fromJson(matrix.model.runs_on) }}
+    runs-on: ["k8s-runner-gpu", "4-gpu-h100"]
     timeout-minutes: 1440
     strategy:
       fail-fast: false
       max-parallel: 8
       matrix:
         model:
-          - { id: meta-llama/Llama-3.1-8B-Instruct, slug: meta-llama-Llama-3.1-8B-Instruct, test_class: TestNightlyLlama8bSingle, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: meta-llama/Llama-3.2-1B-Instruct, slug: meta-llama-Llama-3.2-1B-Instruct, test_class: TestNightlyLlama1bSingle, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: Qwen/Qwen2.5-7B-Instruct, slug: Qwen-Qwen2.5-7B-Instruct, test_class: TestNightlyQwen7bSingle, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: Qwen/Qwen2.5-14B-Instruct, slug: Qwen-Qwen2.5-14B-Instruct, test_class: TestNightlyQwen14bSingle, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: deepseek-ai/DeepSeek-R1-Distill-Qwen-7B, slug: deepseek-ai-DeepSeek-R1-Distill-Qwen-7B, test_class: TestNightlyDeepseek7bSingle, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: Qwen/Qwen3-30B-A3B, slug: Qwen-Qwen3-30B-A3B, test_class: TestNightlyQwen30bSingle, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: mistralai/Mistral-7B-Instruct-v0.3, slug: mistralai-Mistral-7B-Instruct-v0.3, test_class: TestNightlyMistral7bSingle, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: openai/gpt-oss-20b, slug: openai-gpt-oss-20b, test_class: TestNightlyGptOssSingle, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8, slug: meta-llama-Llama-4-Maverick-17B-128E-Instruct-FP8, test_class: TestNightlyLlama4MaverickSingle, runs_on: '["8-gpu-h200"]', gpu_type: H200 }
+          - { id: meta-llama/Llama-3.1-8B-Instruct, slug: meta-llama-Llama-3.1-8B-Instruct, test_class: TestNightlyLlama8bSingle }
+          - { id: meta-llama/Llama-3.2-1B-Instruct, slug: meta-llama-Llama-3.2-1B-Instruct, test_class: TestNightlyLlama1bSingle }
+          - { id: Qwen/Qwen2.5-7B-Instruct, slug: Qwen-Qwen2.5-7B-Instruct, test_class: TestNightlyQwen7bSingle }
+          - { id: Qwen/Qwen2.5-14B-Instruct, slug: Qwen-Qwen2.5-14B-Instruct, test_class: TestNightlyQwen14bSingle }
+          - { id: deepseek-ai/DeepSeek-R1-Distill-Qwen-7B, slug: deepseek-ai-DeepSeek-R1-Distill-Qwen-7B, test_class: TestNightlyDeepseek7bSingle }
+          - { id: Qwen/Qwen3-30B-A3B, slug: Qwen-Qwen3-30B-A3B, test_class: TestNightlyQwen30bSingle }
+          - { id: mistralai/Mistral-7B-Instruct-v0.3, slug: mistralai-Mistral-7B-Instruct-v0.3, test_class: TestNightlyMistral7bSingle }
+          - { id: openai/gpt-oss-20b, slug: openai-gpt-oss-20b, test_class: TestNightlyGptOssSingle }
         variant:
           - { id: sglang, runtime: sglang, grpc_only: "false", setup_vllm: false, setup_trtllm: false, extra_deps: "genai-bench" }
           - { id: vllm,   runtime: vllm,   grpc_only: "true", setup_vllm: true, setup_trtllm: false, extra_deps: "genai-bench" }
@@ -126,12 +124,6 @@ jobs:
       - name: Checkout code
         if: steps.filter.outputs.skip != 'true'
         uses: actions/checkout@v6
-
-      - name: Setup Python (H200 runners)
-        if: steps.filter.outputs.skip != 'true' && matrix.model.gpu_type == 'H200'
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.12"
 
       - name: Setup vLLM backend
         if: steps.filter.outputs.skip != 'true' && matrix.variant.setup_vllm
@@ -163,7 +155,7 @@ jobs:
         if: steps.filter.outputs.skip != 'true'
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-          GPU_TYPE: ${{ matrix.model.gpu_type }}
+          GPU_TYPE: H100
           E2E_MODEL_TP_OVERRIDES: '{"meta-llama/Llama-3.1-8B-Instruct":1,"meta-llama/Llama-3.2-1B-Instruct":1,"Qwen/Qwen2.5-7B-Instruct":1,"Qwen/Qwen2.5-14B-Instruct":1,"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B":1,"Qwen/Qwen3-30B-A3B":1,"mistralai/Mistral-7B-Instruct-v0.3":1,"openai/gpt-oss-20b":1}'
         run: |
           bash scripts/ci_killall_sglang.sh "nuk_gpus"
@@ -192,30 +184,28 @@ jobs:
         run: bash scripts/ci_killall_sglang.sh || true
 
   # ---------------------------------------------------------------------------
-  # Multi-worker: one model per job.
-  # Llama-4 Maverick runs on H200; all other models run on k8s H100.
+  # Multi-worker (H100): one model per job on k8s H100 runners.
   # ---------------------------------------------------------------------------
 
   multi-worker:
     name: "${{ matrix.model.id }} / multi-${{ matrix.variant.id }}"
     needs: build-wheel
     if: ${{ !cancelled() }}
-    runs-on: ${{ fromJson(matrix.model.runs_on) }}
+    runs-on: ["k8s-runner-gpu", "4-gpu-h100"]
     timeout-minutes: 1440
     strategy:
       fail-fast: false
       max-parallel: 8
       matrix:
         model:
-          - { id: meta-llama/Llama-3.1-8B-Instruct, slug: meta-llama-Llama-3.1-8B-Instruct, test_class: TestNightlyLlama8bMulti, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: meta-llama/Llama-3.2-1B-Instruct, slug: meta-llama-Llama-3.2-1B-Instruct, test_class: TestNightlyLlama1bMulti, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: Qwen/Qwen2.5-7B-Instruct, slug: Qwen-Qwen2.5-7B-Instruct, test_class: TestNightlyQwen7bMulti, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: Qwen/Qwen2.5-14B-Instruct, slug: Qwen-Qwen2.5-14B-Instruct, test_class: TestNightlyQwen14bMulti, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: deepseek-ai/DeepSeek-R1-Distill-Qwen-7B, slug: deepseek-ai-DeepSeek-R1-Distill-Qwen-7B, test_class: TestNightlyDeepseek7bMulti, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: Qwen/Qwen3-30B-A3B, slug: Qwen-Qwen3-30B-A3B, test_class: TestNightlyQwen30bMulti, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: mistralai/Mistral-7B-Instruct-v0.3, slug: mistralai-Mistral-7B-Instruct-v0.3, test_class: TestNightlyMistral7bMulti, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          - { id: openai/gpt-oss-20b, slug: openai-gpt-oss-20b, test_class: TestNightlyGptOssMulti, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
-          # - { id: meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8, test_class: TestNightlyLlama4MaverickMulti } # tp=8, keep disabled for nightly
+          - { id: meta-llama/Llama-3.1-8B-Instruct, slug: meta-llama-Llama-3.1-8B-Instruct, test_class: TestNightlyLlama8bMulti }
+          - { id: meta-llama/Llama-3.2-1B-Instruct, slug: meta-llama-Llama-3.2-1B-Instruct, test_class: TestNightlyLlama1bMulti }
+          - { id: Qwen/Qwen2.5-7B-Instruct, slug: Qwen-Qwen2.5-7B-Instruct, test_class: TestNightlyQwen7bMulti }
+          - { id: Qwen/Qwen2.5-14B-Instruct, slug: Qwen-Qwen2.5-14B-Instruct, test_class: TestNightlyQwen14bMulti }
+          - { id: deepseek-ai/DeepSeek-R1-Distill-Qwen-7B, slug: deepseek-ai-DeepSeek-R1-Distill-Qwen-7B, test_class: TestNightlyDeepseek7bMulti }
+          - { id: Qwen/Qwen3-30B-A3B, slug: Qwen-Qwen3-30B-A3B, test_class: TestNightlyQwen30bMulti }
+          - { id: mistralai/Mistral-7B-Instruct-v0.3, slug: mistralai-Mistral-7B-Instruct-v0.3, test_class: TestNightlyMistral7bMulti }
+          - { id: openai/gpt-oss-20b, slug: openai-gpt-oss-20b, test_class: TestNightlyGptOssMulti }
         variant:
           - { id: sglang, runtime: sglang, grpc_only: "false", setup_vllm: false, setup_trtllm: false, extra_deps: "genai-bench" }
           - { id: vllm,   runtime: vllm,   grpc_only: "true", setup_vllm: true, setup_trtllm: false, extra_deps: "genai-bench" }
@@ -239,8 +229,106 @@ jobs:
         if: steps.filter.outputs.skip != 'true'
         uses: actions/checkout@v6
 
-      - name: Setup Python (H200 runners)
-        if: steps.filter.outputs.skip != 'true' && matrix.model.gpu_type == 'H200'
+      - name: Setup vLLM backend
+        if: steps.filter.outputs.skip != 'true' && matrix.variant.setup_vllm
+        uses: ./.github/actions/setup-vllm
+
+      - name: Setup TRT-LLM backend
+        if: steps.filter.outputs.skip != 'true' && matrix.variant.setup_trtllm
+        uses: ./.github/actions/setup-trtllm
+
+      - name: Setup SGLang backend
+        if: steps.filter.outputs.skip != 'true' && !matrix.variant.setup_vllm && !matrix.variant.setup_trtllm
+        uses: ./.github/actions/setup-sglang
+
+      - name: Download wheel artifact
+        if: steps.filter.outputs.skip != 'true'
+        uses: actions/download-artifact@v7
+        with:
+          name: smg-wheel
+          path: wheel/
+
+      - name: Install wheel and test dependencies
+        if: steps.filter.outputs.skip != 'true'
+        run: |
+          pip uninstall -y smg || true
+          pip install wheel/*.whl
+          bash scripts/ci_install_e2e_deps.sh ${{ matrix.variant.extra_deps }}
+
+      - name: Run benchmark
+        if: steps.filter.outputs.skip != 'true'
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          GPU_TYPE: H100
+          E2E_MODEL_TP_OVERRIDES: '{"meta-llama/Llama-3.1-8B-Instruct":1,"meta-llama/Llama-3.2-1B-Instruct":1,"Qwen/Qwen2.5-7B-Instruct":1,"Qwen/Qwen2.5-14B-Instruct":1,"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B":1,"Qwen/Qwen3-30B-A3B":1,"mistralai/Mistral-7B-Instruct-v0.3":1,"openai/gpt-oss-20b":1}'
+        run: |
+          bash scripts/ci_killall_sglang.sh "nuk_gpus"
+
+          K_FILTER="${{ matrix.model.test_class }}"
+          if [ "${{ matrix.variant.grpc_only }}" == "true" ]; then
+            K_FILTER="${{ matrix.model.test_class }} and grpc"
+          fi
+
+          E2E_RUNTIME=${{ matrix.variant.runtime }} \
+          ROUTER_LOCAL_MODEL_PATH="/raid/models" \
+            pytest e2e_test/benchmarks/test_nightly_perf.py \
+              -k "$K_FILTER" \
+              -s -vv -o log_cli=true --log-cli-level=INFO
+
+      - name: Upload benchmark results
+        if: always() && steps.filter.outputs.skip != 'true'
+        uses: actions/upload-artifact@v6
+        with:
+          name: nightly-${{ matrix.model.slug }}-multi-${{ matrix.variant.id }}-${{ github.run_id }}
+          path: nightly_*/
+          retention-days: 90
+
+      - name: Cleanup
+        if: always() && steps.filter.outputs.skip != 'true'
+        run: bash scripts/ci_killall_sglang.sh || true
+
+  # ---------------------------------------------------------------------------
+  # Single-worker (H200): models requiring 8-gpu-h200 runners.
+  # Separate job so H200 pool isn't blocked by H100 max-parallel limits.
+  # ---------------------------------------------------------------------------
+
+  single-worker-h200:
+    name: "${{ matrix.model.id }} / single-${{ matrix.variant.id }}"
+    needs: build-wheel
+    if: ${{ !cancelled() }}
+    runs-on: ["8-gpu-h200"]
+    timeout-minutes: 1440
+    strategy:
+      fail-fast: false
+      max-parallel: 2
+      matrix:
+        model:
+          - { id: meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8, slug: meta-llama-Llama-4-Maverick-17B-128E-Instruct-FP8, test_class: TestNightlyLlama4MaverickSingle }
+        variant:
+          - { id: sglang, runtime: sglang, grpc_only: "false", setup_vllm: false, setup_trtllm: false, extra_deps: "genai-bench" }
+          - { id: vllm,   runtime: vllm,   grpc_only: "true", setup_vllm: true, setup_trtllm: false, extra_deps: "genai-bench" }
+
+    steps:
+      - name: Check filters
+        id: filter
+        run: |
+          MODELS="${{ github.event.inputs.models || 'all' }}"
+          RUNTIME="${{ github.event.inputs.runtime || 'all' }}"
+          SKIP="false"
+          if [ "$MODELS" != "all" ] && ! echo ",$MODELS," | grep -Fq ",${{ matrix.model.id }},"; then
+            SKIP="true"
+          fi
+          if [ "$RUNTIME" != "all" ] && [ "$RUNTIME" != "${{ matrix.variant.id }}" ]; then
+            SKIP="true"
+          fi
+          echo "skip=$SKIP" >> "$GITHUB_OUTPUT"
+
+      - name: Checkout code
+        if: steps.filter.outputs.skip != 'true'
+        uses: actions/checkout@v6
+
+      - name: Setup Python
+        if: steps.filter.outputs.skip != 'true'
         uses: actions/setup-python@v6
         with:
           python-version: "3.12"
@@ -275,8 +363,7 @@ jobs:
         if: steps.filter.outputs.skip != 'true'
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-          GPU_TYPE: ${{ matrix.model.gpu_type }}
-          E2E_MODEL_TP_OVERRIDES: '{"meta-llama/Llama-3.1-8B-Instruct":1,"meta-llama/Llama-3.2-1B-Instruct":1,"Qwen/Qwen2.5-7B-Instruct":1,"Qwen/Qwen2.5-14B-Instruct":1,"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B":1,"Qwen/Qwen3-30B-A3B":1,"mistralai/Mistral-7B-Instruct-v0.3":1,"openai/gpt-oss-20b":1}'
+          GPU_TYPE: H200
         run: |
           bash scripts/ci_killall_sglang.sh "nuk_gpus"
 
@@ -295,7 +382,7 @@ jobs:
         if: always() && steps.filter.outputs.skip != 'true'
         uses: actions/upload-artifact@v6
         with:
-          name: nightly-${{ matrix.model.slug }}-multi-${{ matrix.variant.id }}-${{ github.run_id }}
+          name: nightly-${{ matrix.model.slug }}-single-${{ matrix.variant.id }}-${{ github.run_id }}
           path: nightly_*/
           retention-days: 90
 
@@ -304,11 +391,32 @@ jobs:
         run: bash scripts/ci_killall_sglang.sh || true
 
   # ---------------------------------------------------------------------------
+  # Multi-worker (H200): models requiring 8-gpu-h200 runners.
+  # ---------------------------------------------------------------------------
+
+  # multi-worker-h200:
+  #   name: "${{ matrix.model.id }} / multi-${{ matrix.variant.id }}"
+  #   needs: build-wheel
+  #   if: ${{ !cancelled() }}
+  #   runs-on: ["8-gpu-h200"]
+  #   timeout-minutes: 1440
+  #   strategy:
+  #     fail-fast: false
+  #     max-parallel: 2
+  #     matrix:
+  #       model:
+  #         - { id: meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8, slug: meta-llama-Llama-4-Maverick-17B-128E-Instruct-FP8, test_class: TestNightlyLlama4MaverickMulti }
+  #       variant:
+  #         - { id: sglang, runtime: sglang, grpc_only: "false", setup_vllm: false, setup_trtllm: false, extra_deps: "genai-bench" }
+  #         - { id: vllm,   runtime: vllm,   grpc_only: "true", setup_vllm: true, setup_trtllm: false, extra_deps: "genai-bench" }
+  #   # tp=8, keep disabled for nightly
+
+  # ---------------------------------------------------------------------------
   # Summary
   # ---------------------------------------------------------------------------
 
   summarize-benchmarks:
-    needs: [single-worker, multi-worker]
+    needs: [single-worker, multi-worker, single-worker-h200]
     runs-on: ubuntu-latest
     if: always()
     permissions:
