--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -70,6 +70,32 @@ jobs:
       - name: Mypy (bindings/python)
         run: mypy bindings/python/ --config-file mypy.ini
 
+  grpc-proto-build-check:
+    needs: check-ci
+    if: needs.check-ci.outputs.should_run == 'true'
+    runs-on: k8s-runner-cpu
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.12"
+
+      - name: Copy protos and build
+        run: |
+          mkdir -p grpc_client/python/smg_grpc_proto/proto
+          cp grpc_client/proto/*.proto grpc_client/python/smg_grpc_proto/proto/
+          pip install build grpcio-tools
+          cd grpc_client/python && python -m build
+
+      - name: Test import
+        run: |
+          pip install grpc_client/python/dist/*.whl
+          python -c "from smg_grpc_proto import sglang_scheduler_pb2; print('OK')"
+
   build-wheel:
     needs: check-ci
     if: needs.check-ci.outputs.should_run == 'true'
