Add Go proto codegen script and CI check
- scripts/proto_codegen.sh: Regenerates Go stubs from sglang_scheduler.proto
- proto-codegen-check job in PR CI: Ensures Go stubs stay in sync with protos

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -96,6 +96,37 @@ jobs:
           pip install grpc_client/python/dist/*.whl
           python -c "from smg_grpc_proto import sglang_scheduler_pb2; print('OK')"
 
+  proto-codegen-check:
+    needs: check-ci
+    if: needs.check-ci.outputs.should_run == 'true'
+    runs-on: k8s-runner-cpu
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
+
+      - name: Install protoc and Go plugins
+        run: |
+          sudo apt-get update && sudo apt-get install -y protobuf-compiler
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
+
+      - name: Regenerate Go stubs
+        run: ./scripts/proto_codegen.sh
+
+      - name: Check no uncommitted changes
+        run: |
+          if ! git diff --exit-code bindings/golang/internal/proto/; then
+            echo "ERROR: Go proto stubs are out of sync with proto files."
+            echo "Run ./scripts/proto_codegen.sh and commit the changes."
+            exit 1
+          fi
+
   build-wheel:
     needs: check-ci
     if: needs.check-ci.outputs.should_run == 'true'
